--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -138,6 +138,13 @@
       <dependency>
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+         <exclusions>
+            <exclusion>
+               <groupId>commons-jxpath</groupId>
+               <artifactId>commons-jxpath</artifactId>
+            </exclusion>
+
+         </exclusions>
       </dependency>
       <dependency>
          <groupId>io.netty</groupId>
