--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,9 @@
       <h2.version>2.1.214</h2.version>
       <reactor-bom.version>2020.0.24</reactor-bom.version>
       <netty.version>4.1.75.Final</netty.version>
+      <!-- CVE-2022-31692  -->
+      <spring-security.version>5.7.5</spring-security.version>
+      <spring-security-test.version>5.7.5</spring-security-test.version>
    </properties>
 
    <modules>
