--- a/pipelines/pipeline-jet/pom.xml
+++ b/pipelines/pipeline-jet/pom.xml
@@ -31,6 +31,12 @@
 
          </exclusions>
       </dependency>
+      <!-- TODO Remove once spring-cloud-starter-netflix-eureka-client is updated to use at least this version (vulnerability in 1.4.18) -->
+      <dependency>
+         <groupId>com.thoughtworks.xstream</groupId>
+         <artifactId>xstream</artifactId>
+         <version>1.4.19</version>
+      </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>pipeline-jet-api</artifactId>
